# TrajectoryControl

./: CMakeLists.txt
HomingMotorTrajectory/: CMakeLists.txt  cpkg.toml  homing_motor_trajectory.hpp
MotorTrajectory/: motor_trajectory.hpp
